--- a/top-collegues/src/app/bouton-opinion/bouton-opinion.component.html
+++ b/top-collegues/src/app/bouton-opinion/bouton-opinion.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="button-container">
 	<button id="btn-like" class="btn likeButton" (click)="jaime()">J'aime</button>
 	<button id="btn-dislike" class="btn dislikeButton" (click)="jedeteste()">Je déteste</button>
 </div>
