TP02 - Top-collegue App - service POST un collegue

--- a/top-collegues/src/app/un-collegue/un-collegue.component.html
+++ b/top-collegues/src/app/un-collegue/un-collegue.component.html
@@ -1,8 +1,8 @@
 <div class="card-container">
     <div class="card">
-        <img class="card-img-top" src="{{collegue._url}}">
+        <img class="card-img-top" src="{{collegue.imageUrl}}">
         <div class="card-block">
-            <h5 class="text-bold">{{collegue._nom}}</h5>
+            <h5 class="text-bold">{{collegue.pseudo}}</h5>
             <div class="card-text">
                 {{score}}
             </div>
