--- a/top-collegues/src/styles.css
+++ b/top-collegues/src/styles.css
@@ -25,8 +25,8 @@ body, html {
 
 .info {
 	padding: 1%;
-    background-color: lightgreen;
-    color: green;
+    /*background-color: lightgreen;
+    color: green;*/
 }
 
 .card {
