--- a/top-collegues/src/styles.css
+++ b/top-collegues/src/styles.css
@@ -7,7 +7,7 @@ body, html {
 
 .AppComponent {
 	background-color: darkgray;
-	padding: 4%;
+	padding: 2%;
 }
 
 .formLabel {
@@ -17,6 +17,7 @@ body, html {
 .add-btn {
 	background-color: black;
     color: white;
+    cursor: pointer;
 }
 
 #add-confirm {
@@ -48,6 +49,7 @@ body, html {
     border: none;
     box-shadow: none;
     text-align: center;
+    color: black;
 }
 
 .card-img-top {
@@ -90,14 +92,15 @@ body, html {
 }
 
 .collegue {
-	width: 13%;
+	width: 20%;
     margin: 2%;
     height: 100%;
 }
 
 .row {
 	padding: 2%;
-    height: 60%;
+    justify-content: center;
+    /*height: 60%;*/
 }
 
 .invisible {
@@ -110,6 +113,7 @@ body, html {
     border-color: blue !important;
     color: blue;
     margin: 1%;
+    cursor: pointer;
 }
 
 .dislikeButton {
@@ -118,11 +122,159 @@ body, html {
     border-color: red !important;
     color: red;
     margin: 1%;
+    cursor: pointer;
 
+}
+
+.dislikeButton, .likeButton {
+    font-size: 1.2rem !important;
+    width: 40%;
+    margin: 2px !important;
+    padding: 2px !important;
 }
 
 .button-container {
     display: flex;
     justify-content: center;
     font-size: 0.8rem;
+}
+
+.active-link {
+    background-color: blue!important;
+    color: black !important;
+}
+
+.menu-btn {
+    background-color: darkcyan;
+    color: white !important;
+    margin-top: 1%;
+    margin-left: 2%;
+    text-decoration: none;
+}
+
+.table-img {
+    width: 15%;
+}
+
+.table {
+    margin-top: 3%; 
+
+}
+
+.table td, .table th {
+    padding: .75rem;
+    vertical-align: middle !important;
+    border-top: 1px solid #e9ecef;
+}
+
+.table td {
+    width: 10%;
+}
+
+.carrousel-container {
+    display: flex;
+    width: 100%;
+    margin: 1%;
+}
+
+.carrousel-img {
+    width: 30%;
+    cursor: pointer;
+}
+
+.carousel-item-next, .carousel-item-prev, .carousel-item.active {
+    display: flex !important;
+    align-items:center;
+    justify-content:center;
+}
+
+.carousel-caption h3 {
+    font-size: 5rem !important;
+}
+
+.carousel-caption h3, .carousel-caption p {
+    color: yellow;
+    font-weight: bold;
+}
+
+.action-btn-container .button-container .dislikeButton {
+    background-color: red !important;
+    color: white !important;
+    font-size: 1.5rem !important;
+    width: 15%;
+    margin-left: 1% !important;
+}
+
+.action-btn-container .button-container .likeButton {
+    background-color: blue !important;
+    color: white !important;
+    font-size: 1.5rem !important;
+    width: 15%;
+    margin-right: 1% !important;
+}
+
+td .button-container .likeButton {
+    width: 100% !important;
+    margin-right: 1% !important;
+}
+
+td .button-container .dislikeButton {
+    width: 100% !important;
+    margin-left: 1% !important;
+}
+
+.carousel-control {
+    width: 50%;
+    
+}
+
+.carousel-control-next-icon, .carousel-control-prev-icon {
+    background-color: black;
+}
+
+.detail-nav {
+    border-bottom-style: solid;
+    border-color: lightgrey; 
+    border-width: 1px;
+    margin: 1%;
+    height: 3%;
+}
+
+.detail-link {
+    margin-left: 2%;
+    cursor: pointer;
+    color: blue !important;
+}
+
+a {
+    text-decoration: none !important;
+}
+
+.large-card {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.large-card .card-container {
+    width: 100%;
+}
+
+.large-card .card-container .card{
+    width: 60%;
+}
+
+
+.large-card .card-container .card .card-footer .button-container .likeButton {
+    font-size: 1.5rem !important;
+    width: 50%;
+}   
+
+.large-card .card-container .card .card-footer .button-container .dislikeButton {
+    font-size: 1.5rem !important;
+    width: 50%;
+}
+
+.large-card .card-container .card .card-text {
+    font-size: 2.5rem !important;
 }
