--- a/top-collegues/src/app/vue-tableau/vue-tableau.component.html
+++ b/top-collegues/src/app/vue-tableau/vue-tableau.component.html
@@ -4,6 +4,7 @@
     <app-form-collegue></app-form-collegue>
 </div>
 <app-menu></app-menu>
+<app-limite-nb-collegues [collegues]="collegues"></app-limite-nb-collegues>
 <div class="container">          
   <table class="table">
     <thead>
