--- a/top-collegues/src/app/vue-carrousel/vue-carrousel.component.html
+++ b/top-collegues/src/app/vue-carrousel/vue-carrousel.component.html
@@ -4,6 +4,7 @@
     <app-form-collegue></app-form-collegue>
 </div>
 <app-menu></app-menu>
+<app-limite-nb-collegues></app-limite-nb-collegues>
 <ngb-carousel class="carrousel-container">
   <ng-template ngbSlide *ngFor="let colleg of collegues;">
     <img class="carrousel-img" src="{{colleg.imageUrl}}" alt="Random first slide" routerLink="/detail/{{colleg.pseudo}}">
