TP05 - Top Collegues App - limiter le nombre de collegue a afficher

--- a/top-collegues/src/app/limite-nb-collegues/limite-nb-collegues.component.html
+++ b/top-collegues/src/app/limite-nb-collegues/limite-nb-collegues.component.html
@@ -1,6 +1,7 @@
 <form class="form-limit">
   <div class="input-group mb-2 mr-sm-2 mb-sm-0">
     <div class="input-group-addon">Limite</div>
-    <input type="text" class="form-control" id="limit" name="limit" placeholder="Limite" (change)="limitChanges($event)" #limite>
+    <input type="text" class="form-control" id="limit" name="limit" placeholder="Limite" 
+    (change)="handlelimitChanges($event)" value="{{limite}}">
   </div>
 </form>
