--- a/top-collegues/src/app/vue-tableau/vue-tableau.component.html
+++ b/top-collegues/src/app/vue-tableau/vue-tableau.component.html
@@ -4,7 +4,7 @@
     <app-form-collegue></app-form-collegue>
 </div>
 <app-menu></app-menu>
-<app-limite-nb-collegues [collegues]="collegues"></app-limite-nb-collegues>
+<!-- <app-limite-nb-collegues [collegues]="collegues"></app-limite-nb-collegues> -->
 <div class="container">          
   <table class="table">
     <thead>
@@ -15,12 +15,12 @@
         <th>Action</th>
       </tr>
     </thead>
-    <tbody *ngFor="let colleg of collegues;">
+    <tbody *ngFor="let colleg of collegues$ | async;">
     	<tr>
     		<td class="table-col"><a routerLink="/detail/{{colleg.pseudo}}"><img src="{{colleg.imageUrl}}" class="table-img"/></a></td>
     		<td class="table-col"><a routerLink="/detail/{{colleg.pseudo}}">{{colleg.pseudo}}</a></td>
     		<td class="table-col">{{colleg.score}}</td>
-    		<td class="table-col"><app-bouton-opinion [collegue]="colleg" (change)="colleg.scoreChanges($event)" (click)="colleg.handleEventClicked(colleg.score)"></app-bouton-opinion></td>
+    		<td class="table-col"><app-bouton-opinion [collegue]="colleg" (change)="scoreChanges(colleg,$event)" (click)="handleEventClicked(colleg,colleg.score)"></app-bouton-opinion></td>
     	</tr>
     </tbody>
   </table>
