TP05 - Top Collegues App - pipe uppercase pour tous les pseudos

--- a/top-collegues/src/app/un-collegue/un-collegue.component.html
+++ b/top-collegues/src/app/un-collegue/un-collegue.component.html
@@ -3,7 +3,7 @@
         <a routerLink="/detail/{{collegue.pseudo}}">
             <img class="card-img-top" src="{{collegue.imageUrl}}">
             <div class="card-block">
-                <h5 class="text-bold">{{collegue.pseudo}}</h5>
+                <h5 class="text-bold">{{collegue.pseudo | uppercase}}</h5>
                 <div class="card-text">
                     {{collegue.score}}
                 </div>
