TP06 - Top Collegue - Mise a jour avec les observables

--- a/top-collegues/src/app/bouton-opinion/bouton-opinion.component.html
+++ b/top-collegues/src/app/bouton-opinion/bouton-opinion.component.html
@@ -1,4 +1,4 @@
 <div class="button-container">
-	<button id="btn-like" class="btn likeButton" (click)="jaime()">J'aime</button>
-	<button id="btn-dislike" class="btn dislikeButton" (click)="jedeteste()">Je déteste</button>
+	<button id="btn-like" class="btn btn-outline-success" (click)="jaime()">J'aime</button>
+	<button id="btn-dislike" class="btn btn-outline-danger" (click)="jedeteste()">Je déteste</button>
 </div>
