--- a/top-collegues/src/app/detail-collegue/detail-collegue.component.html
+++ b/top-collegues/src/app/detail-collegue/detail-collegue.component.html
@@ -7,5 +7,5 @@
 </nav>
 
 <div class="large-card">
-	<app-un-collegue [collegue]="collegue"></app-un-collegue>
+	<app-un-collegue [collegue]="collegue$ | async"></app-un-collegue>
 </div>
