--- a/top-collegues/src/app/form-collegue/form-collegue.component.html
+++ b/top-collegues/src/app/form-collegue/form-collegue.component.html
@@ -15,10 +15,13 @@
         <button id="btn-add" class="btn add-btn" (click)="add(pseudo, imageUrl)">Ajouter un nouveau collègue</button>
       </div>
     </div>
-
-    <div class="info" *ngIf="aff">
-    	<p id="add-confirm" [ngStyle]="{'backgroundColor': succesAjout ? 'lightgreen' : 'red', 'color': succesAjout ? 'green' : 'white'}">{{msg}}
-    	</p>
-    </div> 
+    <div class="alert alert-success alert-dismissable" *ngIf="saveSuccess">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        <strong>{{msg}}</strong>
+    </div>
+    <div class="alert alert-danger alert-dismissable" *ngIf="saveError">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        <strong>{{msg}}</strong>
+    </div>
     
 </form> 
