--- a/top-collegues/src/app/limite-nb-collegues/limite-nb-collegues.component.html
+++ b/top-collegues/src/app/limite-nb-collegues/limite-nb-collegues.component.html
@@ -1,7 +1,7 @@
 <form class="form-limit">
   <div class="input-group mb-2 mr-sm-2 mb-sm-0">
     <div class="input-group-addon">Limite</div>
-    <input type="text" class="form-control" id="limit" name="limit" placeholder="Limite" 
+    <input type="text" class="form-control" id="limit" name="limit" placeholder="Limiter le nombre de collègue à afficher" 
     (change)="handlelimitChanges($event)" value="{{limite}}">
   </div>
 </form>
