TP06 - Top Collegue - Dernier avis

--- a/top-collegues/src/app/votre-dernier-avis/votre-dernier-avis.component.html
+++ b/top-collegues/src/app/votre-dernier-avis/votre-dernier-avis.component.html
@@ -1,3 +1,9 @@
-<p>
-  votre-dernier-avis works!
-</p>
+<div class="alert alert-success" *ngIf="votePlus">
+    <strong>{{msg}}</strong>
+</div>
+<div class="alert alert-danger" *ngIf="voteMoins">
+    <strong>{{msg}}</strong>
+</div>
+<div class="alert alert-grey" *ngIf="voteNull">
+    <strong>{{msg}}</strong>
+</div>
