TP Top Collegues - verif en ligne hors ligne toutes les 5 secondes

--- a/top-collegues/src/app/vue-carrousel/vue-carrousel.component.html
+++ b/top-collegues/src/app/vue-carrousel/vue-carrousel.component.html
@@ -1,4 +1,5 @@
 <div class="AppComponent">
+  <app-enligne-verification></app-enligne-verification>
   <h1>Top Collègues</h1>
     <h6>Les meilleurs collègues du moment</h6>
     <app-form-collegue></app-form-collegue>
