--- a/top-collegues/src/app/vue-classique/vue-classique.component.html
+++ b/top-collegues/src/app/vue-classique/vue-classique.component.html
@@ -1,6 +1,8 @@
 <div class="AppComponent">
+  <app-enligne-verification></app-enligne-verification>
   <h1>Top Collègues</h1>
     <h6>Les meilleurs collègues du moment</h6>
+    <p>{{status}}</p>
     <app-form-collegue></app-form-collegue>
 </div>
 <app-menu></app-menu>
