--- a/top-collegues/src/app/bouton-opinion/bouton-opinion.component.html
+++ b/top-collegues/src/app/bouton-opinion/bouton-opinion.component.html
@@ -1,4 +1,4 @@
 <div class="button-container">
-	<button id="btn-like" class="btn btn-outline-success" (click)="jaime()" [disabled]="!actif">J'aime</button>
-	<button id="btn-dislike" class="btn btn-outline-danger" (click)="jedeteste()"[disabled]="!actif">Je déteste</button>
+	<button id="btn-like" class="btn btn-outline-success btn-sm" (click)="jaime()" [disabled]="!actif">J'aime</button>
+	<button id="btn-dislike" class="btn btn-outline-danger btn-sm" (click)="jedeteste()"[disabled]="!actif">Je déteste</button>
 </div>
