--- a/top-collegues/src/app/votre-dernier-avis/votre-dernier-avis.component.html
+++ b/top-collegues/src/app/votre-dernier-avis/votre-dernier-avis.component.html
@@ -1,3 +1,3 @@
-<div class="alert {{avis[1] === 'aimer' ? 'alert-success' : avis[1] === 'detester' ? 'alert-danger': 'alert-grey'}}">
+<div class="alert {{alertClass}}">
     <strong>{{msg}}</strong>
 </div>
