--- a/top-collegues/src/app/un-collegue/un-collegue.component.html
+++ b/top-collegues/src/app/un-collegue/un-collegue.component.html
@@ -9,6 +9,7 @@
         </a>
         <div class="card-footer">
                 <app-bouton-opinion [collegue]="collegue" (change)="scoreChanges($event)" (click)="handleEventClicked(collegue.score)"></app-bouton-opinion>
+                <app-ajout-commentaire [collegue]="collegue"></app-ajout-commentaire>
         </div>
     </div>
 </div>
