TP07 - Top Collegues - Formulaire pilote par le modele en cours

--- a/top-collegues/src/app/ajout-commentaire/ajout-commentaire.component.html
+++ b/top-collegues/src/app/ajout-commentaire/ajout-commentaire.component.html
@@ -1,4 +1,4 @@
-<button id="btnAddComment" class="btn btn-outline-primary btn-sm" (click)="open(content)" [disabled]="!actif">Ajouter un commentaire</button>
+<button class="btn btn-outline-primary btn-sm btnAddComment" (click)="open(content)" [disabled]="!actif">Ajouter un commentaire</button>
 
 <ng-template #content let-d="dismiss">
   <div class="modal-header">
