--- a/top-collegues/src/app/historique-des-votes/historique-des-votes.component.html
+++ b/top-collegues/src/app/historique-des-votes/historique-des-votes.component.html
@@ -10,7 +10,7 @@
                 <div class="media-body">
                     <strong class="notification-title"><h6>{{vote.collegue.pseudo}}</h6></strong>
                     <p class="notification-desc">un vote '{{vote.avis}}' pour {{vote.collegue.pseudo}}. Son score est désormais à {{vote.collegue.score}}</p>
-                    <a class="deleteAtag" (click)=deleteVote(vote.id)>Supprimer</a>
+                    <a class="blueAtag" (click)=deleteVote(vote.id)>Supprimer</a>
                   </div>
             </div>
         </li>
